--- a/tutorials/padlock_probe_designer.ipynb
+++ b/tutorials/padlock_probe_designer.ipynb
@@ -112,7 +112,7 @@
     "#     annotation_release=config[\"annotation_release\"], \n",
     "#     dir_output=dir_output\n",
     "# )\n",
-    "file_transcriptome = region_generator.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"], n_jobs=config[\"n_jobs\"])\n",
+    "file_transcriptome = region_generator.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"])\n",
     "#file_transcriptome = \"/home/francesco/Desktop/Work/oligo-designer-toolsuite/tutorials/data/regions.fasta\""
    ]
   },
@@ -329,26 +329,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "# reads processed: 94\n",
-      "# reads with at least one alignment: 94 (100.00%)\n",
+      "# reads processed: 2678\n",
+      "# reads with at least one alignment: 2678 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 1653 alignments\n",
-      "# reads processed: 562\n",
-      "# reads with at least one alignment: 562 (100.00%)\n",
+      "Reported 87163 alignments\n",
+      "# reads processed: 136\n",
+      "# reads with at least one alignment: 136 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 9987 alignments\n",
+      "Reported 2873 alignments\n",
+      "# reads processed: 2117\n",
+      "# reads with at least one alignment: 2117 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 87883 alignments\n",
+      "# reads processed: 575\n",
+      "# reads with at least one alignment: 575 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 15202 alignments\n",
       "# reads processed: 369\n",
       "# reads with at least one alignment: 369 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 19096 alignments\n",
-      "# reads processed: 2002\n",
-      "# reads with at least one alignment: 2002 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 44697 alignments\n",
-      "# reads processed: 1862\n",
-      "# reads with at least one alignment: 1862 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 63137 alignments\n"
+      "Reported 21850 alignments\n"
      ]
     }
    ],
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
