create class for pielines

--- a/tutorials/introduction_to_ODT_setup_a_custom_pipeline.ipynb
+++ b/tutorials/introduction_to_ODT_setup_a_custom_pipeline.ipynb
@@ -19,6 +19,7 @@
     "# import all the necassary pakages exept from the oligo_designer_toolsuite\n",
     "import os\n",
     "import sys\n",
+    "import shutil\n",
     "import warnings\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "\n",
@@ -92,25 +93,25 @@
     "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator\n",
     "\n",
     "region_generator = CustomGenomicRegionGenerator(\n",
-    "    annotation_file=config[\"file_annotation\"], \n",
-    "    sequence_file=config[\"file_sequence\"], \n",
+    "    annotation_file=config[\"source_params\"][\"file_annotation\"], \n",
+    "    sequence_file=config[\"source_params\"][\"file_sequence\"], \n",
     "    files_source=config[\"source\"], \n",
-    "    species=config[\"species\"], \n",
-    "    annotation_release=config[\"annotation_release\"], \n",
-    "    genome_assembly=config[\"genome_assembly\"],\n",
+    "    species=config[\"source_params\"][\"species\"], \n",
+    "    annotation_release=config[\"source_params\"][\"annotation_release\"], \n",
+    "    genome_assembly=config[\"source_params\"][\"genome_assembly\"],\n",
     "    dir_output=dir_output\n",
     ")\n",
     "# # If the Ncbi config file is selected\n",
     "# region_generator = NcbiGenomicRegionGenerator(\n",
-    "#     taxon=config[\"taxon\"],\n",
-    "#     species=config[\"species\"], \n",
-    "#     annotation_release=config[\"annotation_release\"], \n",
+    "#     taxon=config[\"source_params\"][\"taxon\"],\n",
+    "#     species=config[\"source_params\"][\"species\"], \n",
+    "#     annotation_release=config[\"source_params\"][\"annotation_release\"], \n",
     "#     dir_output=dir_output\n",
     "# )\n",
     "# # If the Ensembl config file is generated\n",
     "# region_generator = EnsemblGenomicRegionGenerator(\n",
-    "#     species=config[\"species\"], \n",
-    "#     annotation_release=config[\"annotation_release\"], \n",
+    "#     species=config[\"source_params\"][\"species\"], \n",
+    "#     annotation_release=config[\"source_params\"][\"annotation_release\"], \n",
     "#     dir_output=dir_output\n",
     "# )\n",
     "file_transcriptome = region_generator.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"])"
@@ -156,7 +157,6 @@
     "\n",
     "# define the database class\n",
     "oligo_database = OligoDatabase(\n",
-    "    file_fasta = file_transcriptome,\n",
     "    min_oligos_per_region = config[\"min_oligos_per_gene\"],\n",
     "    files_source = region_generator.files_source,\n",
     "    species = region_generator.species,\n",
@@ -172,7 +172,7 @@
     "    genes = [line.rstrip() for line in lines]\n",
     "    \n",
     "#generate the oligo sequences from gene transcripts\n",
-    "oligo_database.create_database(oligo_length_min = config[\"oligo_length_min\"], oligo_length_max = config[\"oligo_length_max\"],region_ids = genes)\n",
+    "oligo_database.create_database(file_fasta = file_transcriptome, oligo_length_min = config[\"oligo_length_min\"], oligo_length_max = config[\"oligo_length_max\"],region_ids = genes)\n",
     "\n",
     "# alternative: load database from file\n",
     "# oligo_database.load_oligo_database(file_database)"
@@ -262,15 +262,13 @@
     ")\n",
     "\n",
     "# the melting temperature params need to be preprocessed\n",
-    "Tm_params = config[\"Tm_parameters\"][\"shared\"].copy()\n",
-    "Tm_params.update(config[\"Tm_parameters\"][\"property_filter\"])\n",
+    "Tm_params = config[\"Tm_parameters_target_oligo\"]\n",
     "Tm_params[\"nn_table\"] = getattr(mt, Tm_params[\"nn_table\"])\n",
     "Tm_params[\"tmm_table\"] = getattr(mt, Tm_params[\"tmm_table\"])\n",
     "Tm_params[\"imm_table\"] = getattr(mt, Tm_params[\"imm_table\"])\n",
     "Tm_params[\"de_table\"] = getattr(mt, Tm_params[\"de_table\"])\n",
     "\n",
-    "Tm_chem_correction_param = config[\"Tm_chem_correction_param\"][\"shared\"].copy()\n",
-    "Tm_chem_correction_param.update(config[\"Tm_chem_correction_param\"][\"property_filter\"])\n",
+    "Tm_chem_correction_param = config[\"Tm_chem_correction_param_target_oligo\"]\n",
     "\n",
     "# initialize the filters clasees\n",
     "masked_sequences = MaskedSequences()\n",
@@ -293,7 +291,7 @@
     "filters = [masked_sequences, gc_content, melting_temperature, padlock_arms]\n",
     "\n",
     "# initialize the property filter class\n",
-    "property_filter = PropertyFilter(filters=filters, write_regions_with_insufficient_oligos=config[\"write_removed_genes\"])\n",
+    "property_filter = PropertyFilter(filters=filters)\n",
     "# filter the database\n",
     "oligo_database = property_filter.apply(oligo_database=oligo_database, n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result in a file\n",
@@ -324,34 +322,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "# reads processed: 2678\n",
-      "# reads with at least one alignment: 2678 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 87163 alignments\n",
-      "# reads processed: 136\n",
-      "# reads with at least one alignment: 136 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 2873 alignments\n",
-      "# reads processed: 2117\n",
-      "# reads with at least one alignment: 2117 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 87883 alignments\n",
-      "# reads processed: 575\n",
-      "# reads with at least one alignment: 575 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 15202 alignments\n",
-      "# reads processed: 369\n",
-      "# reads with at least one alignment: 369 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 21850 alignments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from oligo_designer_toolsuite.database import ReferenceDatabase\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter import (\n",
@@ -376,24 +347,24 @@
     "\n",
     "# intialize the filter classes\n",
     "exact_mathces = ExactMatches(dir_specificity=dir_specificity)\n",
-    "seed_ligation = LigationRegionCreation(ligation_region_size=config[\"ligation_region_size\"])\n",
-    "seed_region = BowtieSeedRegion(dir_specificity=dir_specificity, seed_region_creation=seed_ligation)\n",
     "blastn = Blastn(\n",
     "    dir_specificity=dir_specificity, \n",
     "    word_size=config[\"word_size\"],\n",
     "    percent_identity=config[\"percent_identity\"],\n",
     "    coverage=config[\"coverage\"],\n",
-    "    strand=config[\"strand\"],\n",
+    "    strand=\"plus\",\n",
     ")\n",
-    "filters = [exact_mathces, seed_region, blastn]\n",
+    "filters = [exact_mathces, blastn]\n",
     "\n",
     "# initialize the specificity filter class\n",
-    "specificity_filter = SpecificityFilter(filters=filters, write_regions_with_insufficient_oligos=config[\"write_removed_genes\"])\n",
+    "specificity_filter = SpecificityFilter(filters=filters)\n",
     "# filte r the database\n",
     "oligo_database = specificity_filter.apply(oligo_database=oligo_database, reference_database=reference, n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result\n",
     "if config[\"write_intermediate_steps\"]:\n",
-    "    file_database = oligo_database.write_database(filename=\"oligo_database_specificity_filter.txt\")"
+    "    file_database = oligo_database.write_database(filename=\"oligo_database_specificity_filter.txt\")\n",
+    "\n",
+    "shutil.rmtree(dir_specificity)"
    ]
   },
   {
@@ -447,7 +418,6 @@
     "    oligos_scoring=oligos_scoring,\n",
     "    set_scoring=set_scoring,\n",
     "    heurustic_selection=padlock_heuristic_selection,\n",
-    "    write_regions_with_insufficient_oligos=config[\"write_removed_genes\"]\n",
     ")\n",
     "\n",
     "# generate the oligoset\n",
@@ -476,15 +446,13 @@
     "from oligo_designer_toolsuite.sequence_design import PadlockSequence\n",
     "\n",
     "# preprocessing of themelting temperature parameters\n",
-    "Tm_params = config[\"Tm_parameters\"][\"shared\"].copy()\n",
-    "Tm_params.update(config[\"Tm_parameters\"][\"detection_oligo\"])\n",
+    "Tm_params = config[\"Tm_parameters_detection_oligo\"]\n",
     "Tm_params[\"nn_table\"] = getattr(mt, Tm_params[\"nn_table\"])\n",
     "Tm_params[\"tmm_table\"] = getattr(mt, Tm_params[\"tmm_table\"])\n",
     "Tm_params[\"imm_table\"] = getattr(mt, Tm_params[\"imm_table\"])\n",
     "Tm_params[\"de_table\"] = getattr(mt, Tm_params[\"de_table\"])\n",
     "\n",
-    "Tm_chem_correction_parameters = config[\"Tm_chem_correction_param\"][\"shared\"].copy()\n",
-    "Tm_chem_correction_parameters.update(config[\"Tm_chem_correction_param\"][\"detection_oligo\"])\n",
+    "Tm_chem_correction_parameters = config[\"Tm_chem_correction_param_detection_oligo\"]\n",
     "\n",
     "# initilize the padlock sequence designer class\n",
     "padlock_sequence = PadlockSequence(\n",
@@ -502,9 +470,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oligo",
+   "display_name": "ODT",
    "language": "python",
-   "name": "python3"
+   "name": "odt"
   },
   "language_info": {
    "codemirror_mode": {
