--- a/tutorials/padlock_probe_designer.ipynb
+++ b/tutorials/padlock_probe_designer.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,10 +57,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial'"
+      "text/plain": [
+       "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial'"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -71,13 +77,9 @@
    ],
    "source": [
     "dir_output"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,10 +146,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      "text/plain": [
+       "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -156,13 +166,9 @@
    ],
    "source": [
     "file_transcriptome"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,15 +200,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from oligo_designer_toolsuite.database import OligoDatabase\n",
@@ -237,18 +252,23 @@
     "\n",
     "# alternative: load database from file\n",
     "# oligo_database.load_oligo_database(file_database)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "['bc25mer_1', 'bc25mer_2', 'bc25mer_3', 'bc25mer_4', 'bc25mer_5']"
+      "text/plain": [
+       "['bc25mer_1', 'bc25mer_2', 'bc25mer_3', 'bc25mer_4', 'bc25mer_5']"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -257,14 +277,17 @@
    ],
    "source": [
     "list(oligo_database.database.keys())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -280,10 +303,7 @@
     "\n",
     "sample_oligos_DB = {gene: {oligo_id: oligo_database.database[gene][oligo_id]}}\n",
     "print(sample_oligos_DB)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -331,10 +351,18 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "['AARS1', 'DECR2', 'FAM234A', 'RHBDF1', 'WASIR2']"
+      "text/plain": [
+       "['AARS1', 'DECR2', 'FAM234A', 'RHBDF1', 'WASIR2']"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -343,36 +371,35 @@
    ],
    "source": [
     "genes"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'oligo_database' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[10], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43moligo_database\u001B[49m\u001B[38;5;241m.\u001B[39mload_oligo_database(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tutorials/data/oligos_creation/oligo_DB_human_GRCh38.p14_NCBI_release_current_transcripts.tsv\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'oligo_database' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43moligo_database\u001b[49m\u001b[38;5;241m.\u001b[39mload_oligo_database(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tutorials/data/oligos_creation/oligo_DB_human_GRCh38.p14_NCBI_release_current_transcripts.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'oligo_database' is not defined"
      ]
     }
    ],
    "source": [
     "oligo_database.load_oligo_database(\"/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tutorials/data/oligos_creation/oligo_DB_human_GRCh38.p14_NCBI_release_current_transcripts.tsv\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -403,7 +430,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -425,7 +451,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -495,7 +520,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -516,10 +540,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      "text/plain": [
+       "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      ]
      },
      "execution_count": 8,
      "metadata": {},
@@ -527,7 +559,9 @@
     },
     {
      "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      "text/plain": [
+       "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
@@ -535,7 +569,9 @@
     },
     {
      "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      "text/plain": [
+       "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/output_tutorial/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_90.fna'"
+      ]
      },
      "execution_count": 10,
      "metadata": {},
@@ -544,14 +580,17 @@
    ],
    "source": [
     "file_transcriptome"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -568,10 +607,7 @@
     "with open(file_transcriptome, \"r\") as handle:\n",
     "    fasta = SeqIO.parse(handle, \"fasta\")\n",
     "    print(any(fasta)) # False when `fasta` is empty, i.e. wasn't a FASTA file\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -661,7 +697,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -722,7 +757,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -766,7 +800,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -780,15 +814,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "1615ef6491af5e87b9afff9dac6dddb07d1479905b03b1763ba4488454196f77"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
