small bug fixes

--- a/tutorials/build_a_custom_pipeline.ipynb
+++ b/tutorials/build_a_custom_pipeline.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
     "import os\n",
     "import sys\n",
     "import yaml\n",
-    "import shutil"
+    "import shutil\n",
+    "import pprint"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,22 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "config_file = os.path.join(dir_package, \"data/configs/scrinshot_probe_designer_custom.yaml\") # custom config\n",
-    "# config_file = os.path.join(dir_package, \"data/configs/padlock_probe_designer_ncbi.yaml\") # NCBI config\n",
-    "# config_file = os.path.join(dir_package, \"data/configs/padlock_probe_designer_ensemble.yaml\") # Ensemble config\n",
+    "# config_file = os.path.join(dir_package, \"data/configs/scrinshot_probe_designer_ncbi.yaml\") # NCBI config\n",
+    "# config_file = os.path.join(dir_package, \"data/configs/scrinshot_probe_designer_ensemble.yaml\") # Ensemble config\n",
     "\n",
     "with open(config_file, 'r') as yaml_file:\n",
     "    config = yaml.safe_load(yaml_file)\n",
+    "\n",
     "dir_output = os.path.join(dir_package, config[\"dir_output\"]) # create the complete path for the output directory\n",
+    "config[\"file_genes\"] = os.path.join(dir_package, config[\"file_genes\"])  # create the complete path for genes file\n",
     "\n",
     "# only needed when custom config used\n",
     "config[\"source_params\"][\"file_annotation\"] = os.path.join(dir_package, config[\"source_params\"][\"file_annotation\"]) \n",
-    "config[\"source_params\"][\"file_sequence\"] = os.path.join(dir_package, config[\"source_params\"][\"file_sequence\"]) \n",
-    "config[\"file_genes\"] = os.path.join(dir_package, config[\"file_genes\"]) "
+    "config[\"source_params\"][\"file_sequence\"] = os.path.join(dir_package, config[\"source_params\"][\"file_sequence\"]) "
    ]
   },
   {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,12 +173,12 @@
     "\n",
     "``[gene][oligo_id][oligo_features]``\n",
     "\n",
-    "*Note: if you already have a stored database you can load it into an OligoDatabase object by using the ``load_oligo_database()`` function.*"
+    "*Note: if you already have a stored database you can load it into an OligoDatabase object by using the* ``load_oligo_database()`` *function.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,23 +219,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AARS1': {'AARS1_16:70265624-70265662(-)': {'sequence': Seq('GAGACACTGCTTGGCTCCTCTATGACACCTATGGGTTT'), 'chromosome': '16', 'start': [70265624], 'end': [70265662], 'strand': '-', 'length': 38, 'additional_information_fasta': ['transcript_id=NM_001605.3,exon_number=10;transcript_id=XM_047433666.1,exon_number=10']}}}\n"
+      "{'AARS1': {'AARS1_16:70265623-70265661(-)': {'additional_information_fasta': ['transcript_id=NM_001605.3,exon_number=10;transcript_id=XM_047433666.1,exon_number=10'],\n",
+      "                                             'chromosome': '16',\n",
+      "                                             'end': [70265661],\n",
+      "                                             'length': 38,\n",
+      "                                             'sequence': Seq('AGACACTGCTTGGCTCCTCTATGACACCTATGGGTTTC'),\n",
+      "                                             'start': [70265623],\n",
+      "                                             'strand': '-'},\n",
+      "           'AARS1_16:70265624-70265662(-)': {'additional_information_fasta': ['transcript_id=NM_001605.3,exon_number=10;transcript_id=XM_047433666.1,exon_number=10'],\n",
+      "                                             'chromosome': '16',\n",
+      "                                             'end': [70265662],\n",
+      "                                             'length': 38,\n",
+      "                                             'sequence': Seq('GAGACACTGCTTGGCTCCTCTATGACACCTATGGGTTT'),\n",
+      "                                             'start': [70265624],\n",
+      "                                             'strand': '-'}}}\n"
      ]
     }
    ],
    "source": [
     "gene = list(oligo_database.database.keys())[0]\n",
-    "oligo_id = list(oligo_database.database[gene].keys())[0]\n",
+    "oligo_id_1 = list(oligo_database.database[gene].keys())[0]\n",
+    "oligo_id_2 = list(oligo_database.database[gene].keys())[1]\n",
     "\n",
-    "sample_oligos_DB = {gene: {oligo_id: oligo_database.database[gene][oligo_id]}}\n",
-    "print(sample_oligos_DB)"
+    "sample_oligos_DB = {gene: {oligo_id_1: oligo_database.database[gene][oligo_id_1], \n",
+    "                           oligo_id_2: oligo_database.database[gene][oligo_id_2]}}\n",
+    "pprint.pprint(sample_oligos_DB)"
    ]
   },
   {
@@ -250,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
